<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_change_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_container_dark_navy">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/fragment_change_password_decorative_rectangle"
            android:layout_width="325dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/shape_container_dark_blue"
            tools:ignore="contentDescription" />

        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/fragment_change_password_waves"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:scaleY="1"
            android:clickable="true"
            app:mwhCloseColor="@color/darkBlue"
            app:mwhColorAlpha="0.7"
            app:mwhProgress="1"
            app:mwhStartColor="@color/darkBlue"
            app:mwhVelocity="3"
            app:mwhWaveHeight="25dp"
            app:mwhWaves="MultiWave" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_change_password_title_section_first"
                android:textColor="@color/peach"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_change_password_title_section_second"
                android:textColor="@color/white"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/fragment_change_password_subtitle_section_first"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/fragment_change_password_subtitle_section_second"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/fragment_change_password_subtitle_section_third"
                    android:textColor="@color/peach"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="75dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_change_password_text_input_old_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/fragment_change_password_old_password"
                app:boxStrokeColor="@color/peach"
                app:endIconMode="password_toggle"
                app:errorIconDrawable="@null"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_change_password_text_input_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans_light"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHighlight="@color/peach"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_change_password_text_input_new_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/fragment_change_password_new_password"
                app:boxStrokeColor="@color/peach"
                app:endIconMode="password_toggle"
                app:errorIconDrawable="@null"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_change_password_text_input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans_light"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHighlight="@color/peach"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fragment_change_password_button_submit"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_change_password_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="16sp"
                android:textStyle="normal"
                app:backgroundTint="@color/peach"
                app:cornerRadius="25dp"
                app:rippleColor="@color/darkNavy" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

