<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_confirmation"
    android:background="@drawable/shape_container_dark_navy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/fragment_confirmation_decorative_rectangle"
            android:layout_width="325dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/shape_container_dark_blue"
            tools:ignore="contentDescription" />

        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/fragment_change_password_waves"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:scaleY="1"
            app:mwhCloseColor="@color/darkBlue"
            app:mwhColorAlpha="0.7"
            app:mwhProgress="1"
            app:mwhStartColor="@color/darkBlue"
            app:mwhVelocity="3"
            app:mwhWaveHeight="20dp"
            app:mwhWaves="MultiWave" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_confirmation_title_section_first"
                android:textColor="@color/peach"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_confirmation_title_section_second"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_confirmation_title_section_third"
                android:textColor="@color/peach"
                android:textSize="26sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/fragment_confirmation_subtitle"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fragment_confirmation_text_view_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:textAlignment="viewStart"
            android:textColor="@color/peach"
            android:textSize="15sp" />

        <com.raycoarana.codeinputview.CodeInputView
            android:id="@+id/fragment_confirmation_code_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            app:code_text_color="@color/white"
            app:code_text_margin_bottom="7dp"
            app:code_text_size="35dp"
            app:error_color="@color/darkRed"
            app:input_type="numeric"
            app:length_of_code="6"
            app:underline_color="@color/darkBlue"
            app:underline_selected_color="@color/peach"
            app:underline_stroke_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="@font/open_sans_light"
                android:gravity="center"
                android:text="@string/fragment_confirmation_text_view_no_code"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fragment_confirmation_button_resend"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_confirmation_button_resend_code"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@drawable/button_text_style_peach_white"
                android:textIsSelectable="false"
                android:textSize="15sp"
                android:textStyle="normal"
                app:rippleColor="@color/transparent" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>