<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_forgot_password_verification"
    android:background="@drawable/shape_container_dark_navy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/fragment_forgot_password_verification_decorative_rectangle"
            android:layout_width="325dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/shape_container_dark_blue"
            tools:ignore="contentDescription" />

        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/fragment_change_password_waves"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:scaleY="1"
            android:clickable="true"
            app:mwhCloseColor="@color/darkBlue"
            app:mwhColorAlpha="0.7"
            app:mwhProgress="1"
            app:mwhStartColor="@color/darkBlue"
            app:mwhVelocity="3"
            app:mwhWaveHeight="20dp"
            app:mwhWaves="MultiWave" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_forgot_password_verification_title_section_first"
                android:textColor="@color/peach"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/fragment_forgot_password_verification_title_section_second"
                android:textColor="@color/white"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/fragment_forgot_password_verification_subtitle_section_first"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/fragment_forgot_password_verification_subtitle_section_second"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/fragment_forgot_password_verification_subtitle_section_third"
                    android:textColor="@color/peach"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
                android:id="@+id/fragment_forgot_password_verification_text_input_email_layout"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_forgot_password_verification_hint_email"
                app:boxStrokeColor="@color/peach"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_forgot_password_verification_text_input_email"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:fontFamily="@font/open_sans"
                    android:textColorHighlight="@color/peach"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/fragment_forgot_password_verification_button_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                app:backgroundTint="@color/peach"
                app:fabSize="mini"
                app:rippleColor="@color/darkNavy"
                app:srcCompat="@drawable/ic_send"
                app:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

